NetBSD Problem Report #40225

From bouyer@antioche.lip6.fr  Fri Dec 19 10:07:27 2008
Return-Path: <bouyer@antioche.lip6.fr>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 28F3863B8BD
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 19 Dec 2008 10:07:27 +0000 (UTC)
Message-Id: <200812191007.mBJA7Md3016682@armandeche.lip6.fr>
Date: Fri, 19 Dec 2008 11:07:22 +0100 (MET)
From: Manuel BOUYER <bouyer@antioche.lip6.fr>
Reply-To: bouyer@antioche.lip6.fr
To: gnats-bugs@gnats.NetBSD.org
Subject: panic: indiracct: missing indir
X-Send-Pr-Version: 3.95

>Number:         40225
>Category:       kern
>Synopsis:       panic: indiracct: missing indir
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    hannken
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 19 10:10:01 +0000 2008
>Closed-Date:    Sat Dec 20 15:51:42 +0000 2008
>Last-Modified:  Sat Dec 20 15:51:42 +0000 2008
>Originator:     bouyer@antioche.lip6.fr
>Release:        NetBSD 5.99.5
>Organization:
>Environment:
System: NetBSD 5.99.5 (XEN3_DOMU) #6: Thu Dec 18 21:07:06 CET 2008
	bouyer@roll:/dsk/l1/misc/bouyer/tmp/amd64/obj/dsk/l1/misc/bouyer/current/src/sys/arch/amd64/compile/XEN3_DOMU
Architecture: amd64
Machine: amd64
>Description:
	With an up to date -current both systems (i386 and amd64) paniced 
	with "indiracct: missing indir" during the nightly fsck_ffs -x.
	Both systems were running a pkgsrc pbulk at the same time.
	The stack is in both cases:
db> tr
breakpoint(c0415853,ce7a7488,c044df00,0,0,0,ce7a749c,c039d3c3,c04cf320,0) at netbsd:breakpoint+0x4
panic(c0416fbe,c04cefe0,3057d003,1,3057d003,1,ce7a74bc,c02af61c,6,1) at netbsd:panic+0x1b2
indiracct(0,0,ffffeff4,ffffffff,100c,0,22af4c,0,1,0) at netbsd:indiracct+0x50d
indiracct(f370a0,0,ffffeff3,ffffffff,100c,0,22af4c,0,1000,0) at netbsd:indiracct+0x3ef
expunge(c015a930,2,0,0,8000,0,ce7a79b4,c0fd5000,ce915734,c1002600) at netbsd:expunge+0x451
ffs_snapshot(ca878204,ce914238,ce7a7ae4,c020303b,c04a9f42,d188ed94,ce7a7a0c,0,c0488fc0,c1822cf8) at netbsd:ffs_snapshot+0x17db
fss_ioctl(a300,800c4600,ce7a7c50,3,d1a07ce0,1,ce7a7b3c,cd57400c,c,800c4600) at netbsd:fss_ioctl+0x605
spec_ioctl(ce7a7b44,d1a07ce0,ce7a7b6c,c02b0855,c040df60,cd57400c,800c4600,ce7a7c50,3,cb6549a4) at netbsd:spec_ioctl+0x99
VOP_IOCTL(cd57400c,800c4600,ce7a7c50,3,cb6549a4,bb781000,128f000,0,5,21) at netbsd:VOP_IOCTL+0x37
vn_ioctl(cb718548,800c4600,ce7a7c50,c03c5fd8,ce7a7c30,0,10,0,800c,3) at netbsd:vn_ioctl+0x5f
sys_ioctl(d1a07ce0,ce7a7d00,ce7a7d28,bb781280,bb781000,d1899a98,1,4,800c4600,bf7fe46c) at netbsd:sys_ioctl+0x11f
syscall(ce7a7d48,1f,1f,1f,1f,bf7fe45e,4,bf7fe488,0,0) at netbsd:syscall+0xc7

>How-To-Repeat:
	run fsck_ffs -x with other filesystem activity ?
	May require a kernel with options DEBUG and/or DIAGNOSTIC
>Fix:


>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->hannken
Responsible-Changed-By: hannken@NetBSD.org
Responsible-Changed-When: Fri, 19 Dec 2008 10:34:00 +0000
Responsible-Changed-Why:
Take.


From: Juergen Hannken-Illjes <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40225 CVS commit: src/sys/ufs/ffs
Date: Fri, 19 Dec 2008 11:36:10 +0000 (UTC)

 Module Name:	src
 Committed By:	hannken
 Date:		Fri Dec 19 11:36:10 UTC 2008

 Modified Files:
 	src/sys/ufs/ffs: ffs_snapshot.c

 Log Message:
 Restore a line removed by mistake with the last commit.

 Should fix PR 40225 panic: indiracct: missing indir.


 To generate a diff of this commit:
 cvs rdiff -r1.88 -r1.89 src/sys/ufs/ffs/ffs_snapshot.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Fri, 19 Dec 2008 11:41:01 +0000
State-Changed-Why:
Please try again with Rev. 1.89 of sys/ufs/ffs/ffs_snapshot.c


From: Manuel Bouyer <bouyer@antioche.eu.org>
To: gnats-bugs@NetBSD.org
Cc: hannken@NetBSD.org, netbsd-bugs@NetBSD.org, gnats-admin@NetBSD.org
Subject: Re: kern/40225 (panic: indiracct: missing indir)
Date: Sat, 20 Dec 2008 13:07:16 +0100

 On Fri, Dec 19, 2008 at 11:41:02AM +0000, hannken@NetBSD.org wrote:
 > Synopsis: panic: indiracct: missing indir
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: hannken@NetBSD.org
 > State-Changed-When: Fri, 19 Dec 2008 11:41:01 +0000
 > State-Changed-Why:
 > Please try again with Rev. 1.89 of sys/ufs/ffs/ffs_snapshot.c

 Both system survived several fsck_ffs -X and the nightly scripts run.
 I think we can say it's fixed :)

 -- 
 Manuel Bouyer <bouyer@antioche.eu.org>
      NetBSD: 26 ans d'experience feront toujours la difference
 --

State-Changed-From-To: feedback->closed
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Sat, 20 Dec 2008 15:51:42 +0000
State-Changed-Why:
Submitter states fixed.
.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.