Restore a line removed by mistake with the last commit.

Should fix PR 40225 panic: indiracct: missing indir.